--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -64,7 +64,7 @@
         transition: .3s;
     }
     
-    .show_menu{
+    .show-menu{
         bottom: 0;
     }
     .nav__list{
@@ -90,6 +90,9 @@
     .nav__toggle{
         font-size: 1.1rem;
         cursor: pointer;
+        /* position: absolute;
+        right: 1.3rem;
+        bottom: 0.5rem; */
     }
     .nav__icon,
     .nav__close, 
