--- a/src/components/Work/work.css
+++ b/src/components/Work/work.css
@@ -97,3 +97,28 @@
         column-gap: 0.25rem;
     }
 }
+
+.rive-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 10px;
+    background-color: var(--title-color);
+    color: var(--container-color);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
