--- a/src/app.css
+++ b/src/app.css
@@ -216,3 +216,22 @@ img {
     margin-right: var(--mb-1);
   }
 }
+
+/* .slide-in{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #0f0f0f;
+  transform-origin: bottom;
+}
+.slide-out{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #0f0f0f;
+  transform-origin: top;
+} */
