--- a/src/components/Certifications/index.html
+++ b/src/components/Certifications/index.html
@@ -7,21 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <!-- header -->
-    <header>
-        <div class="logo">Lundev</div>
-        <ul class="menu">
-            <li>Home</li>
-            <li>Blog</li>
-            <li>Info</li>
-        </ul>
-        <div class="search">
-            <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
-            </svg>
-        </div>
-    </header>
-
     <!-- slider -->
 
     <div class="slider">
@@ -124,6 +109,6 @@
     </div>
 
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
